plugins/mermaid/plugin/src/test/resources/intention/declarations/branch.mermaid
gitGraph
  branch <error descr="Conflicting branch">main</error>
  branch <error descr="Conflicting branch">master</error>
  branch <error descr="Conflicting branch">master</error>
  branch correct